# kattis

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: learn-github-actions.yml
python/: 13floors.py  aaah.py  abc.py  addtwonumbers.py  areal.py  aterriblefortress.py  listgame.py
src/: aaah.py  aaah_nb.py  abc_nums.py  addtwonumbers.py  anewalphabet.py  areal.py  aterriblefortress.py  listgame.py  lvable.py  treizefloors.py  troisdprinter.py
src/marimo/: aaah_nb.py  abc_nums_nb.py  addtwonumbers_nb.py  anewalphabet_nb.py  areal_nb.py  aterriblefortress_nb.py  listgame_nb.py  lvable_nb.py  treizefloors_nb.py  troisdprinter_nb.py
tests/: aaah_test.py  abc_nums_test.py  abc_test.py  addtwonumbers_test.py  anewalphabet_test.py  areal_test.py  aterriblefortress_test.py  listgame_test.py  lvable_test.py  treizefloors_test.py  troisdprinter_test.py
workflows/: learn-github-actions.yml
