[project]
name = "kattis"
version = "0.1.0"
description = "first poetry project"
authors = [
    {name = "saliouetu",email = "elhadjisaliou.niass.etu@univ-lille.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cisco-sdwan (>=1.26,<2.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
