[project]
name = "kattis"
version = "0.1.0"
description = "first poetry project"
authors = [
    { name = "saliouetu", email = "elhadjisaliou.niass.etu@univ-lille.fr" }
]
license = "MIT"
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cisco-sdwan (>=1.26,<2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "marimo (>=0.10.12,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "converge (>=1.1.1,<2.0.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "ruff (>=0.1.13,<1.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "poetry"

